--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   },
   "homepage": "https://github.com/SchleicherConfalonieriN/PPT#readme",
   "dependencies": {
+    "app": "^0.1.0",
+    "cd": "^0.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "index.js": "^0.0.3",
+    "install": "^0.13.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.27.0"
+    "npm": "^9.2.0",
+    "sequelize": "^6.27.0",
+    "start": "^5.1.0"
   }
 }
